<resources>
    <string name="app_name">Notebook</string>
    <string name="add_note">Add Note</string>
    <string name="blank_notepad">Notepad is blank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">Theme</string>
    <string name="delete">All notes delete</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="select_theme">Select a notepad theme</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>



    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>