<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootComponent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_notepad_blue"
    tools:context=".presentation.themeScreen.ThemeFragment">

    <TextView
        android:id="@+id/settingsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_theme"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/current_pick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsMessage">

            <RadioButton
                android:id="@+id/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_circle_blue"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/yellow"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_circle_yellow" />

            <RadioButton
                android:id="@+id/green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_circle_green"
                android:text="@string/green" />

            <RadioButton
                android:id="@+id/gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_circle_gray"
                android:text="@string/gray" />

            <RadioButton
                android:id="@+id/pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_circle_pink"
                android:text="@string/pink" />

    </RadioGroup>

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>